<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/record"
        android:id="@+id/textView39"
        android:layout_marginTop="21dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#595757" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:entries="@array/cat"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/textView40"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/NAME"
        android:id="@+id/textView41"
        android:textColor="#595757"
        android:layout_below="@+id/spinner"
        android:layout_alignLeft="@+id/spinner"
        android:layout_alignStart="@+id/spinner" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText18"
        android:layout_alignLeft="@+id/textView41"
        android:layout_alignStart="@+id/textView41"
        android:layout_below="@+id/textView41"
        android:layout_alignRight="@+id/textView47"
        android:layout_alignEnd="@+id/textView47" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/modelnum"
        android:id="@+id/textView42"
        android:textColor="#595757"
        android:layout_below="@+id/editText18"
        android:layout_alignLeft="@+id/textView41"
        android:layout_alignStart="@+id/textView41" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText19"
        android:layout_below="@+id/textView42"
        android:layout_alignLeft="@+id/textView42"
        android:layout_alignStart="@+id/textView42"
        android:layout_alignRight="@+id/editText18"
        android:layout_alignEnd="@+id/editText18" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/amount"
        android:id="@+id/textView43"
        android:textColor="#595757"
        android:layout_below="@+id/editText19"
        android:layout_alignLeft="@+id/editText19"
        android:layout_alignStart="@+id/editText19" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText20"
        android:layout_below="@+id/textView43"
        android:layout_alignLeft="@+id/textView43"
        android:layout_alignStart="@+id/textView43"
        android:layout_toLeftOf="@+id/textView47"
        android:layout_toStartOf="@+id/textView47" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/datepurch"
        android:id="@+id/textView44"
        android:layout_above="@+id/editText21"
        android:layout_toRightOf="@+id/textView42"
        android:layout_toEndOf="@+id/textView42"
        android:textColor="#595757" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editText21"
        android:layout_above="@+id/textView45"
        android:layout_alignRight="@+id/editText22"
        android:layout_alignEnd="@+id/editText22" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/store"
        android:id="@+id/textView45"
        android:textColor="#595757"
        android:layout_below="@+id/editText20"
        android:layout_alignLeft="@+id/textView42"
        android:layout_alignStart="@+id/textView42" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText22"
        android:layout_below="@+id/textView45"
        android:layout_alignLeft="@+id/textView45"
        android:layout_alignStart="@+id/textView45"
        android:layout_alignRight="@+id/textView47"
        android:layout_alignEnd="@+id/textView47" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        android:id="@+id/yesbutton"
        android:layout_below="@+id/editText22"
        android:layout_alignLeft="@+id/editText21"
        android:layout_alignStart="@+id/editText21"
        android:textColor="#595757" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no"
        android:id="@+id/button8"
        android:layout_below="@+id/editText22"
        android:layout_toRightOf="@+id/textView39"
        android:layout_toEndOf="@+id/textView39"
        android:textColor="#595757" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/imageView3"
        android:src="@drawable/camera"
        android:layout_below="@+id/yesbutton"
        android:layout_alignRight="@+id/textView41"
        android:layout_alignEnd="@+id/textView41" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/photo"
        android:id="@+id/textView47"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_alignLeft="@+id/textView39"
        android:layout_alignStart="@+id/textView39"
        android:textColor="#595757" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/rksubmit"
        android:background="#93cd5e"
        android:layout_below="@+id/imageView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp"
        android:textColor="#ffffff"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/warranty"
        android:id="@+id/textView48"
        android:layout_alignTop="@+id/yesbutton"
        android:layout_alignLeft="@+id/editText22"
        android:layout_alignStart="@+id/editText22"
        android:textColor="#595757" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/category"
        android:id="@+id/textView40"
        android:layout_below="@+id/textView39"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#595757" />


</RelativeLayout>
